--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -128,6 +128,13 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QPushButton" name="pb_loadcsv">
+        <property name="text">
+         <string>加载CSV</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
     <item>
